feat: Event service

--- a/tests/cassettes/test_event_all.yaml
+++ b/tests/cassettes/test_event_all.yaml
@@ -16,31 +16,31 @@ interactions:
     uri: https://api.easypost.com/v2/events?page_size=5
   response:
     body:
-      string: '{"events": [{"description": "batch.updated", "id": "evt_4a8e25761ccb11eda9904f969790a8a6",
+      string: '{"events": [{"description": "tracker.updated", "id": "evt_10273e48f0fd11ed84793ba5a8eedd27",
         "user_id": "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2022-08-15T18:51:37.312Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_49d98e861ccb11edbd447505f1663554", "user_id":
+        "2023-05-12T19:42:00.675Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_09ce2606f0fd11edbdad75c323776192", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2022-08-15T18:51:36.128Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_478dbcf61ccb11edbbb835ab5e8e30cc", "user_id":
+        "2023-05-12T19:41:50.025Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_ec52b330f0fc11ed8fb25952d8250621", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2022-08-15T18:51:32.276Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.updated", "id": "evt_46a686561ccb11ed81e91da8777bd466", "user_id":
+        "2023-05-12T19:41:00.562Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_e5fa84d6f0fc11ed8a553172f33bdada", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2022-08-15T18:51:30.761Z", "mode": "test", "object": "Event"}, {"description":
-        "batch.created", "id": "evt_4696ee801ccb11ed80f613cd85645f96", "user_id":
+        "2023-05-12T19:40:49.917Z", "mode": "test", "object": "Event"}, {"description":
+        "tracker.updated", "id": "evt_c87dfcdaf0fc11ed853c153e3118e97d", "user_id":
         "user_54356a6b96c940d8913961a3c7b909f2", "status": "pending", "created_at":
-        "2022-08-15T18:51:30.658Z", "mode": "test", "object": "Event"}], "has_more":
+        "2023-05-12T19:40:00.447Z", "mode": "test", "object": "Event"}], "has_more":
         true}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1108'
+      - '1118'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"c891332068114556a692400898fcdee7"
+      - W/"61a0f7c32156b73ff33fabdb5284da68"
       expires:
       - '0'
       pragma:
@@ -58,20 +58,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af48062fa95bde79a79c00026213f
+      - 3f02a2cf64626ba0e7874083002057b8
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.186990'
+      - '0.267240'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
