--- a/tests/cassettes/test_insurance_all.yaml
+++ b/tests/cassettes/test_insurance_all.yaml
@@ -16,16 +16,88 @@ interactions:
     uri: https://api.easypost.com/v2/insurances?page_size=5
   response:
     body:
-      string: '{"insurances": [], "has_more": false}'
+      string: '{"insurances": [{"id": "ins_9490959cd728452b985e41c2a7e9e591", "object":
+        "Insurance", "mode": "test", "reference": null, "status": "pending", "amount":
+        "100.00000", "provider": "easypost", "provider_id": null, "to_address": {"id":
+        "adr_a859ad85f34611edb81fac1f6bc7b362", "object": "Address", "created_at":
+        "2023-05-15T17:33:51+00:00", "updated_at": "2023-05-15T17:33:51+00:00", "name":
+        "ELIZABETH SWAN", "company": null, "street1": "179 N HARBOR DR", "street2":
+        null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": false, "federal_tax_id": null, "state_tax_id": null,
+        "verifications": {"zip4": {"success": true, "errors": [], "details": null},
+        "delivery": {"success": true, "errors": [], "details": {"latitude": 33.8436,
+        "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}}, "from_address":
+        {"id": "adr_a85ee05af34611ed82ddac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-05-15T17:33:51+00:00", "updated_at": "2023-05-15T17:33:51+00:00", "name":
+        "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
+        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
+        true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
+        "time_zone": "America/Los_Angeles"}}}}, "shipment_id": null, "tracker": {"id":
+        "trk_2c76559389a844f2a36479b0a131e677", "object": "Tracker", "mode": "test",
+        "tracking_code": "9400100104262209986269", "status": "error", "status_detail":
+        null, "created_at": "2023-05-15T17:33:51Z", "updated_at": "2023-05-15T17:33:51Z",
+        "signed_by": null, "weight": null, "est_delivery_date": null, "shipment_id":
+        null, "carrier": "USPS", "tracking_details": [{"object": "TrackingDetail",
+        "message": "In test mode, only test tracking numbers are valid. Test tracking
+        numbers are EZ1000000001, EZ2000000002, ... , EZ7000000007", "description":
+        null, "status": "error", "status_detail": null, "datetime": "2023-05-15T17:33:51Z",
+        "source": "ProcessingError", "carrier_code": null, "tracking_location": {"object":
+        "TrackingLocation", "city": null, "state": null, "country": null, "zip": null}}],
+        "carrier_detail": null, "finalized": true, "is_return": false, "public_url":
+        "https://track.easypost.com/djE6dHJrXzJjNzY1NTkzODlhODQ0ZjJhMzY0NzliMGExMzFlNjc3",
+        "fees": []}, "tracking_code": "9400100104262209986269", "fee": {"object":
+        "Fee", "type": "InsuranceFee", "amount": "1.00000", "charged": true, "refunded":
+        false}, "messages": [], "created_at": "2023-05-15T17:33:51Z", "updated_at":
+        "2023-05-15T17:33:51Z"}, {"id": "ins_e60e5e24549648c78069269b3ade5e42", "object":
+        "Insurance", "mode": "test", "reference": null, "status": "pending", "amount":
+        "100.00000", "provider": "easypost", "provider_id": null, "to_address": {"id":
+        "adr_a93ebda3f34611edbb1c3cecef1b359e", "object": "Address", "created_at":
+        "2023-05-15T17:33:53+00:00", "updated_at": "2023-05-15T17:33:53+00:00", "name":
+        "ELIZABETH SWAN", "company": null, "street1": "179 N HARBOR DR", "street2":
+        null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": false, "federal_tax_id": null, "state_tax_id": null,
+        "verifications": {"zip4": {"success": true, "errors": [], "details": null},
+        "delivery": {"success": true, "errors": [], "details": {"latitude": 33.8436,
+        "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}}, "from_address":
+        {"id": "adr_a943c199f34611edbb203cecef1b359e", "object": "Address", "created_at":
+        "2023-05-15T17:33:53+00:00", "updated_at": "2023-05-15T17:33:53+00:00", "name":
+        "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
+        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
+        true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
+        "time_zone": "America/Los_Angeles"}}}}, "shipment_id": null, "tracker": {"id":
+        "trk_8b28077df755477c92df4122d2797f73", "object": "Tracker", "mode": "test",
+        "tracking_code": "9400100104262209986283", "status": "error", "status_detail":
+        null, "created_at": "2023-05-15T17:33:53Z", "updated_at": "2023-05-15T17:33:53Z",
+        "signed_by": null, "weight": null, "est_delivery_date": null, "shipment_id":
+        null, "carrier": "USPS", "tracking_details": [{"object": "TrackingDetail",
+        "message": "In test mode, only test tracking numbers are valid. Test tracking
+        numbers are EZ1000000001, EZ2000000002, ... , EZ7000000007", "description":
+        null, "status": "error", "status_detail": null, "datetime": "2023-05-15T17:33:53Z",
+        "source": "ProcessingError", "carrier_code": null, "tracking_location": {"object":
+        "TrackingLocation", "city": null, "state": null, "country": null, "zip": null}}],
+        "carrier_detail": null, "finalized": true, "is_return": false, "public_url":
+        "https://track.easypost.com/djE6dHJrXzhiMjgwNzdkZjc1NTQ3N2M5MmRmNDEyMmQyNzk3Zjcz",
+        "fees": []}, "tracking_code": "9400100104262209986283", "fee": {"object":
+        "Fee", "type": "InsuranceFee", "amount": "1.00000", "charged": true, "refunded":
+        false}, "messages": [], "created_at": "2023-05-15T17:33:53Z", "updated_at":
+        "2023-05-15T17:33:53Z"}], "has_more": false}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '34'
+      - '5355'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"5f1a59bebcbbd5ae61942f9e2d9fb8d8"
+      - W/"36c367a5e230654b6e9af24383f83138"
       expires:
       - '0'
       pragma:
@@ -43,21 +115,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 008a5d686331d5fbe2b7eb3200287924
+      - 44e495af64626d01e78744810020682e
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - intlb2wdc 29913d444b
-      - extlb4wdc 29913d444b
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.025425'
+      - '0.113227'
       x-version-label:
-      - easypost-202209232036-233807d491-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
