--- a/tests/cassettes/test_rate_retrieve.yaml
+++ b/tests/cassettes/test_rate_retrieve.yaml
@@ -26,86 +26,95 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-08-15T18:52:09Z", "is_return": false, "messages":
-        [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+      string: '{"created_at": "2023-05-15T18:11:04Z", "is_return": false, "messages":
+        [{"carrier": "DhlEcs", "carrier_account_id": "ca_0d64fd488c1444cf9bc16f858703e28f",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_99007e1aeb66421faf82676f1199481e",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_c7b4cfaf671b4984b84023d77561394a",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_711d8c4f9be54801b984e5dc9f2b5a7c",
+        "type": "rate_error", "message": "Unauthorized. Please check credentials and
+        try again"}, {"carrier": "DhlEcs", "carrier_account_id": "ca_b1a0a1bc45844159812e0224d53948ea",
         "type": "rate_error", "message": "Unauthorized. Please check credentials and
         try again"}], "mode": "test", "options": {"currency": "USD", "payment": {"type":
         "SENDER"}, "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2022-08-15T18:52:10Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2023-05-15T18:11:05Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_5df9fc951ccb11edbcb9ac1f6bc72124", "object": "Address", "created_at":
-        "2022-08-15T18:52:09+00:00", "updated_at": "2022-08-15T18:52:09+00:00", "name":
+        "adr_db21d518f34b11ed8e63ac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00", "name":
         "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
-        "US", "phone": "5555555555", "email": "test@example.com", "mode": "test",
-        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_c3b8cce9077b4b54af64504550f4e1dd", "object": "Parcel", "created_at":
-        "2022-08-15T18:52:09Z", "updated_at": "2022-08-15T18:52:09Z", "length": 10.0,
-        "width": 8.0, "height": 4.0, "predefined_package": null, "weight": 15.4, "mode":
-        "test"}, "postage_label": null, "rates": [{"id": "rate_b5106583ffe346fb841c4358cbbecd5a",
-        "object": "Rate", "created_at": "2022-08-15T18:52:10Z", "updated_at": "2022-08-15T18:52:10Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.90",
-        "currency": "USD", "retail_rate": "9.45", "retail_currency": "USD", "list_rate":
-        "7.90", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_ca534e4a1c8d43e1a0b2a12726ba9a20", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_c79c8c901a52462f9ec88db624ed5fb7",
-        "object": "Rate", "created_at": "2022-08-15T18:52:10Z", "updated_at": "2022-08-15T18:52:10Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.75",
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_f5a7d63d9d064e7ea095cac03d658c90",
+        "object": "Parcel", "created_at": "2023-05-15T18:11:04Z", "updated_at": "2023-05-15T18:11:04Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_7a4ca00785d84f26adeffde144851009",
+        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76",
         "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate":
         "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_ca534e4a1c8d43e1a0b2a12726ba9a20", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_841b8bb64e914e999650b19b70d412e8",
-        "object": "Rate", "created_at": "2022-08-15T18:52:10Z", "updated_at": "2022-08-15T18:52:10Z",
-        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.57", "currency":
-        "USD", "retail_rate": "5.57", "retail_currency": "USD", "list_rate": "5.57",
+        5, "shipment_id": "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_c83acc4163b546e78216f0ed2ced2b15",
+        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.15",
+        "currency": "USD", "retail_rate": "10.20", "retail_currency": "USD", "list_rate":
+        "8.24", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_d69fdc7be5624ef888f980a06d5f9bd2",
+        "object": "Rate", "created_at": "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "6.07", "currency":
+        "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate": "6.07",
         "list_currency": "USD", "billing_type": "easypost", "delivery_days": 3, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": 3, "shipment_id":
-        "shp_ca534e4a1c8d43e1a0b2a12726ba9a20", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
-        {"id": "rate_86ebb9d29e9a470f922f0e5d374af5b2", "object": "Rate", "created_at":
-        "2022-08-15T18:52:10Z", "updated_at": "2022-08-15T18:52:10Z", "mode": "test",
-        "service": "Express", "carrier": "USPS", "rate": "29.50", "currency": "USD",
-        "retail_rate": "33.55", "retail_currency": "USD", "list_rate": "29.50", "list_currency":
+        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_1dd6bae25d9744d1908d3aee7de10bd3", "object": "Rate", "created_at":
+        "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "31.25", "currency": "USD",
+        "retail_rate": "35.80", "retail_currency": "USD", "list_rate": "31.25", "list_currency":
         "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
         null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
-        "shp_ca534e4a1c8d43e1a0b2a12726ba9a20", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
         "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
-        null, "to_address": {"id": "adr_5df7db561ccb11ed83faac1f6b0a0d1e", "object":
-        "Address", "created_at": "2022-08-15T18:52:09+00:00", "updated_at": "2022-08-15T18:52:09+00:00",
+        null, "to_address": {"id": "adr_db1f9331f34b11ed866dac1f6bc7bdc6", "object":
+        "Address", "created_at": "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "usps_zone": 4, "return_address": {"id": "adr_5df9fc951ccb11edbcb9ac1f6bc72124",
-        "object": "Address", "created_at": "2022-08-15T18:52:09+00:00", "updated_at":
-        "2022-08-15T18:52:09+00:00", "name": "Jack Sparrow", "company": null, "street1":
+        {}}, "usps_zone": 4, "return_address": {"id": "adr_db21d518f34b11ed8e63ac1f6b0a0d1e",
+        "object": "Address", "created_at": "2023-05-15T18:11:04+00:00", "updated_at":
+        "2023-05-15T18:11:04+00:00", "name": "Jack Sparrow", "company": null, "street1":
         "388 Townsend St", "street2": "Apt 20", "city": "San Francisco", "state":
-        "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email": "test@example.com",
+        "CA", "zip": "94107", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
         null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
-        "adr_5df7db561ccb11ed83faac1f6b0a0d1e", "object": "Address", "created_at":
-        "2022-08-15T18:52:09+00:00", "updated_at": "2022-08-15T18:52:09+00:00", "name":
+        "adr_db1f9331f34b11ed866dac1f6bc7bdc6", "object": "Address", "created_at":
+        "2023-05-15T18:11:04+00:00", "updated_at": "2023-05-15T18:11:04+00:00", "name":
         "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "5555555555", "email": "test@example.com", "mode": "test", "carrier_facility":
+        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, "forms": [], "fees": [], "id": "shp_ca534e4a1c8d43e1a0b2a12726ba9a20",
+        {}}, "forms": [], "fees": [], "id": "shp_c8d674f4c09146dfa38ce27c9407c866",
         "object": "Shipment"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '5025'
+      - '5851'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b0ca52477e249097ece27123bc67627e"
+      - W/"771d160f7d8c6f346fd3a8f6e166db96"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_ca534e4a1c8d43e1a0b2a12726ba9a20
+      - /api/v2/shipments/shp_c8d674f4c09146dfa38ce27c9407c866
       pragma:
       - no-cache
       referrer-policy:
@@ -121,20 +130,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47c62fa95d9e79a7a4600262a6e
+      - 44e495af646275b8e78751e90023fc43
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.625707'
+      - '0.926748'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -154,25 +163,25 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/rates/rate_b5106583ffe346fb841c4358cbbecd5a
+    uri: https://api.easypost.com/v2/rates/rate_7a4ca00785d84f26adeffde144851009
   response:
     body:
-      string: '{"id": "rate_b5106583ffe346fb841c4358cbbecd5a", "object": "Rate", "created_at":
-        "2022-08-15T18:52:10Z", "updated_at": "2022-08-15T18:52:10Z", "mode": "test",
-        "service": "Priority", "carrier": "USPS", "rate": "7.90", "currency": "USD",
-        "retail_rate": "9.45", "retail_currency": "USD", "list_rate": "7.90", "list_currency":
-        "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date": null,
-        "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
-        "shp_ca534e4a1c8d43e1a0b2a12726ba9a20", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}'
+      string: '{"id": "rate_7a4ca00785d84f26adeffde144851009", "object": "Rate", "created_at":
+        "2023-05-15T18:11:05Z", "updated_at": "2023-05-15T18:11:05Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "6.76", "currency":
+        "USD", "retail_rate": "7.75", "retail_currency": "USD", "list_rate": "7.75",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 5, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 5, "shipment_id":
+        "shp_c8d674f4c09146dfa38ce27c9407c866", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '535'
+      - '539'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"d3d547f09c3b4afd3c813bf17f6dd72f"
+      - W/"5be323f32739ace01ee4d9280fe22914"
       expires:
       - '0'
       pragma:
@@ -190,20 +199,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47c62fa95dae79a7a4600262aab
+      - 44e495af646275b9e78751e90023fca2
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.195713'
+      - '0.186967'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305151637-e5ce91ee24-master
       x-xss-protection:
       - 1; mode=block
     status:
